5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4179/executions/1582_2896.log
== TEST (2019-03-19 16:42:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Digite o nome: ")

# Impressao de saidas
print()
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:43:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Digite o nome: ")
ALM

# Impressao de saidas
print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    ALM
NameError: name 'ALM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:44:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Almir"")
# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input ("Almir"")
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:44:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Almir")
# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:44:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input ("Almir")
# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.133929
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
